[Fix] -> More settings vertically align for popup without responsive image background param.

--- a/inc/customizer/custom-controls/background/background.scss
+++ b/inc/customizer/custom-controls/background/background.scss
@@ -80,5 +80,12 @@
     .arrow-icon {
         margin-left: 5px;
     }
+}
 
+.ast-field-settings-modal {
+    .customize-control-ast-background {
+        .more-settings {
+            margin-top: 6px;
+        }
+    }
 }
